# se-mapping-education

./: AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  SE_MANIFEST.toml  pyproject.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml  validate.yml
docs/: index.md
docs/en/: coverage-matrix.md  index.md  scope.md
docs/en/validation/: index.md
src/se_mapping_education/: __init__.py  __main__.py  cli.py  constants.py  matrix.py  sort.py  types.py  validate.py
tests/: test_matrix.py  test_sort.py  test_sort_coverage.py  test_validate.py
