# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================
# Updated: 2026-04-15
# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.
# CUSTOM: Update identity and build tool src folders.

# ============================================================
# SECTION 1: PROJECT IDENTITY (name, version, CUSTOM dependencies)
# ============================================================

[project]
name = "se-mapping-education" # Package distribution name (lowercase and dashes).
readme = "README.md"
requires-python = ">=3.15"
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
dev = ["pre-commit"] # Used for checks
docs = ["zensical"]  # Used for docs generation

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"
tag-pattern = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.build.targets.wheel]
only-include = [
  "README.md",
  "SE_MANIFEST.toml",
  "CITATION.cff",
  "docs",
]
